--- a/home.html
+++ b/home.html
@@ -2,19 +2,19 @@
 <html>
 
 <head>
-  <title>Ragmatical</title>
+  <title>BrokenElbow</title>
 
   <body>
     <header>
       <h1>These are my projects.</h1>
     </header>
     <div>
-      <a href='http://ragmatical.herokuapp.com/create'>Account Creation</a>
+      <a href='http://brokenelbow.herokuapp.com/create'>Account Creation</a>
     </div>
     <!-- <div>
-  <a href='http://ragmatical.herokuapp.com/hw1'>WIP</a>
+  <a href='http://brokenelbow.herokuapp.com/hw1'>WIP</a>
 </div> -->
     <div>
-      <a href='http://ragmatical.herokuapp.com/login'>Login</a>
+      <a href='http://brokenelbow.herokuapp.com/login'>Login</a>
     </div>
   </body>
