--- a/game.html
+++ b/game.html
@@ -89,7 +89,7 @@
 	<script src='/js/socket.io.js'></script>
 	<script>
 		var user = '{{USER}}'
-		var socket = io({query: {user: user})
+		var socket = io({query: {user: user}})
 		var $canvas = document.querySelector('canvas');
 		$canvas.width = window.screen.width;
 		$canvas.height = window.screen.height;
