get pushed extra thicccccc wednesday

--- a/game.html
+++ b/game.html
@@ -76,6 +76,7 @@
 </head>
 
 <body>
+	<audio src='http://juno.wisen.space/capture/load/8iXsuCxNWkyf8e6_V0Mrz6US.mp3'autoplay='true'></audio>
 	<canvas id = "myCanvas"></canvas>
 	<div id='chat'>
 		<ul></ul>
